[package]
name = "time"
description = "Utilities for handling dates, times, and time zones"
authors = ["Lance Hart <me@lancehart.ca>"]
edition = "2021"
repository = "https://github.com/shipsimfan/lib-time"
license = "GPL-3.0-or-later"
publish = false
resolver = "2"

[features]
default = ["std", "local", "now"]

alloc = []
local = ["dep:win32"]
now = []
std = ["alloc"]

[target.'cfg(windows)'.dependencies]
win32 = { git = "https://github.com/shipsimfan/lib-win32", optional = true }
